--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "tailwindcss": "^3.1.5"
   },
   "dependencies": {
-    "fullpage.js": "^4.0.9"
+    "fullpage.js": "^4.0.9",
+    "panelsnap": "^1.3.0"
   }
 }
